  * Don't default to missing files

KeePassDroid (1.9)
  * New entry view design
  * Show custom strings in .kdbx databases
  * Fix expiry date in .kdbx databases

KeePassDroid (1.8.6.4)
  * Update Chinese translations
  
KeePassDroid (1.8.6.3)
  * Fix db saving issue
  
KeePassDroid (1.8.6.2)
  * Add Chinese translations
  
KeePassDroid (1.8.6)
  * New native crypto implementation
  
KeePassDroid (1.8.5.1)
  * Update Polish translation
  
KeePassDroid (1.8.5)
  * Add default database checkbox
  
KeePassDroid (1.8.4)
  * Fix crash on saving new entries
  
KeePassDroid (1.8.3)
  * Guard against crash when loading icons
  * Handle spaces correctly from file browser
  
KeePassDroid (1.8.2)
  * Support Android 2.2 backup manager
  * Add Polish translations
  * Only show notifications if username and password exist
  * Keep icons on entry update

KeePassDroid (1.8.1)
  * Android 1.5 compatibility fixes

KeePassDroid (1.8)
  * Layout updates
  * Custom icon support
  
KeePassDroid (1.7.2)
  * Password generator from Tolga Onbay
  
KeePassDroid (1.7.1)
  * Fix timeout locking
  
KeePassDroid (1.7)
  * Add icon support from Tobias Selig
  
KeePassDroid (1.6.3)
  * Search tweaks from Johan Berts
  
KeePassDroid (1.6.2)
  * Fix layout issues on Android 1.5
  
KeePassDroid (1.6.1)
  * Add file browser for keyfiles
  * Add missing sdcard warning
  * Fix binary 64-bit keyfiles

KeePassDroid (1.6)
  * Add setting to control timeout duration.
  * Add file browser

KeePassDroid (1.5.9)
  * Bump target sdk to 8
  * Allow install to sdcard

KeePassDroid (1.5.8)
  * Update Russian translations
  * Add Nynorsk translations
  * Fix no compression .kdbx files
  
KeePassDroid (1.5.7)
  * KeePass 2.11 compatibility fixes

KeePassDroid (1.5.6)
  * Keyfile Fix

KeePassDroid (1.5.5)
  * Twofish support for .kdb
  * Refresh fixes

KeePassDroid (1.5.4)
  * Key file fixes
  * Implement sorting

KeePassDroid (1.5.3)
  * Remove debug tracing

KeePassDroid (1.5.2)
  * Various crash fixes