@@ -1,4 +1,5 @@
   * Don't default to missing files
+  * Search the username field
 
 KeePassDroid (1.9)
   * New entry view design
